Fixing ugly ass margin on mobile shot

--- a/source/stylesheets/_trackr.scss
+++ b/source/stylesheets/_trackr.scss
@@ -88,7 +88,6 @@ $header-color: #28282E;
 
   .mobile-shots {
     min-height: 693px;
-    margin-bottom: 160px;
   }
 }
 
